--- a/JSCamera/JSCamera.css
+++ b/JSCamera/JSCamera.css
@@ -33,8 +33,8 @@ body {
 }
 
 video {
-    max-height: 50em;
-    min-width: 70em;
+    /* max-height: 50em; */
+    /* min-width: 70em; */
 }
 
 .hidden {
