Stopped the fancy gradient

--- a/JSCamera/JSCamera.css
+++ b/JSCamera/JSCamera.css
@@ -16,7 +16,8 @@ body {
 
 #container {
     position: relative;
-    width: 75em; 
+    width: 75em;
+    height: fit-content;
 }
 
 .mirrored {
@@ -36,10 +37,10 @@ body {
     font-size: 5em;
 }
 
-/* rect {
+ rect {
     fill:#000000;
 	fill-opacity: 0.7;
-} */
+} 
 
 .boundingSvg {
     position: absolute;
