--- a/JSCamera/JSCamera.css
+++ b/JSCamera/JSCamera.css
@@ -4,9 +4,9 @@ video {
 }
 
 body {
-    display: flex;
+    display: inline-block;
     justify-content: center;
-    margin: 0;
+    margin-left: 50%;
     background: black;
 }
 
